--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ networks:
 services: 
     nginx:
         image: nginx:alpine
-        container_name: nginx
+        container_name: mclass_nginx
         restart: unless-stopped
         tty: true
         ports:
-            - "8001:8001"
+            - "8888:8001"
         volumes: 
             - ./src:/var/www/app
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -24,7 +24,7 @@ services:
     mysql:
         platform: linux/amd64
         image: mysql
-        container_name: mysql
+        container_name: mclass_mysql
         restart: unless-stopped
         tty: true
         ports: 
@@ -45,7 +45,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: php
+        container_name: mclass_php
         restart: unless-stopped
         tty: true
         working_dir: /var/www/app
